[gd_scene load_steps=5 format=3 uid="uid://bvskd0vgeq032"]

[ext_resource type="Theme" uid="uid://bi4ct4ejmsk48" path="res://assets/fonts/battle_ui_big.theme" id="1_h06fq"]
[ext_resource type="Script" path="res://addons/chicken_scratch/DialogueNode.gd" id="2_qpaxv"]
[ext_resource type="Script" path="res://scripts/dialogue/backend/Dialogue.gd" id="3_dqi74"]

[sub_resource type="Resource" id="Resource_8015f"]
resource_local_to_scene = true
script = ExtResource("3_dqi74")
text = ""
speaker = ""

[node name="DialogueNode" type="GraphNode"]
texture_filter = 1
offset_right = 223.0
offset_bottom = 147.0
theme = ExtResource("1_h06fq")
title = "Dialogue Node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("2_qpaxv")
dialogue = SubResource("Resource_8015f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Speaker" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 32)
layout_mode = 2
placeholder_text = "Speaker"

[node name="Text" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "Dialogue goes here..."

[node name="Test Print" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test Print"

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="text_changed" from="VBoxContainer/Speaker" to="." method="_on_speaker_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Text" to="." method="_on_dialogue_text_changed"]
[connection signal="pressed" from="VBoxContainer/Test Print" to="." method="_on_test_print_pressed"]
